Changed file names for the basic stuff

--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Datos.cs" />
     <Compile Include="DSCampos.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
