Addded basic entities

--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Campo.cs" />
+    <Compile Include="Cultivo.cs" />
+    <Compile Include="CultivoCampo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
