Implemented first 4 elemental entities, they need lots of tinkering tho...

--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abono.cs" />
     <Compile Include="Campo.cs" />
     <Compile Include="Cultivo.cs" />
     <Compile Include="CultivoCampo.cs" />
